# SP-hw4

./: CMakeLists.txt  Makefile  build.ninja  func.c  func.h  lab5.sh  main.c  rules.ninja
